objects/Audibene__c.object
<CustomObject>
    <fields>
        <fullName>FLSTest__c</fullName>
        <label>FLSTest</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ItemRev__c</fullName>
        <label>ItemRev</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>TrinityValue</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SupportTeam__c</fullName>
        <complianceGroup>PII</complianceGroup>
        <label>SupportTeam</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
                <value>
                    <fullName>G</fullName>
                </value>
                <value>
                    <fullName>H</fullName>
                </value>
                <value>
                    <fullName>I</fullName>
                </value>
                <value>
                    <fullName>J</fullName>
                </value>
                <value>
                    <fullName>K</fullName>
                </value>
                <value>
                    <fullName>L</fullName>
                </value>
                <value>
                    <fullName>M</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Audibene</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Audibene Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Audibene</pluralLabel>
    <recordTypes>
        <fullName>NewRecord</fullName>
        <active>true</active>
        <label>NewRecord</label>
    </recordTypes>
    <recordTypes>
        <fullName>RTType</fullName>
        <active>true</active>
        <label>RTType</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>